tests/error/polar_invalid_mod.gw
// [contains] in modulus component of polar value...
 %(NULL, 0);
